# vibes

./: .gitignore  ACP_HARDENING.md  LICENSE  Makefile  README.md  SPEC.md  eslint.config.mjs  package.json  pyproject.toml
.github/: copilot-instructions.md
config/: endpoints.json
docs/: ACP CHUNK ROUTING.md  API.md  CONFIGURATION.md
src/vibes/: __init__.py  acp_client.py  acp_protocol.py  app.py  config.py  db.py  opengraph.py  tasks.py
src/vibes/routes/: __init__.py  agents.py  media.py  posts.py  sse.py
src/vibes/static/: index.html  manifest.json
src/vibes/static/css/: katex.min.css  styles.css
src/vibes/static/js/: api.js  app.js
tests/: __init__.py  conftest.py  test_acp_client.py  test_acp_protocol.py  test_db.py  test_routes.py
